--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "simplebar": "^5.3.8",
+    "simplebar-react": "^2.4.1",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
@@ -45,6 +47,8 @@
   "devDependencies": {
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
+    "ps-scrollbar-tailwind": "^0.0.1",
+    "tailwind-scrollbar": "^1.3.1",
     "tailwindcss": "^3.0.24"
   }
 }
