--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
     "daisyui": "^2.15.2",
     "flowbite": "^1.4.7",
     "flowbite-react": "^0.0.27",
@@ -19,6 +20,8 @@
     "react-query": "^3.39.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.3.2",
+    "react-toastify": "^9.0.5",
     "react-youtube": "^9.0.2",
     "simplebar": "^5.3.8",
     "simplebar-react": "^2.4.1",
